[gd_scene load_steps=8 format=3 uid="uid://dhuumbglfhw3k"]

[ext_resource type="Script" path="res://ChangeDVDMenu.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://cwncpq3i0a70l" path="res://TemporarilyTest/JustWorkingMenu.tscn" id="2"]
[ext_resource type="Theme" uid="uid://4g7pi1nwsoji" path="res://Theme/Perkedel_Tema.tres" id="3"]
[ext_resource type="PackedScene" uid="uid://ipw6bqe3n2in" path="res://Scenes/JustWorkingSetting.tscn" id="4"]
[ext_resource type="PackedScene" path="res://GameDVDCardtridge/TemplateHexagonEngine/LevelCardtridge/MusicEnjoy/SelectFileLoadingMode.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://egem5djf3tnj" path="res://Scenes/JustZetrixVRViewer.tscn" id="6"]
[ext_resource type="PackedScene" path="res://Scenes/JustModListToLoad.tscn" id="7"]

[node name="ChangeDVDMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="JustWorkingMenu" parent="." instance=ExtResource("2")]
layout_mode = 1
grow_horizontal = 2
grow_vertical = 2

[node name="JustWorkingAreYouSure" type="ConfirmationDialog" parent="."]
position = Vector2i(200, 200)
size = Vector2i(1000, 300)
always_on_top = true
popup_window = true
theme = ExtResource("3")
dialog_text = "Are you sure to shutdown?"
dialog_autowrap = true

[node name="JustWorkingSetting" parent="." instance=ExtResource("4")]
visible = false

[node name="SelectFileLoadingMode" parent="." instance=ExtResource("5")]

[node name="JustAFileDialog" type="FileDialog" parent="."]
filters = PackedStringArray("*.tscn; Godot Tscene", "*.scn; Godot scene")
show_hidden_files = true

[node name="JustZetrixVRViewer" parent="." instance=ExtResource("6")]
visible = false

[node name="JustModListToLoad" parent="." instance=ExtResource("7")]
visible = false

[connection signal="DVDListRefreshed" from="JustWorkingMenu" to="." method="_on_JustWorkingMenu_DVDListRefreshed"]
[connection signal="ItemClickEnter" from="JustWorkingMenu" to="." method="_on_JustWorkingMenu_ItemClickEnter"]
[connection signal="PressShutDown" from="JustWorkingMenu" to="." method="_on_JustWorkingMenu_PressShutDown"]
[connection signal="importModPCKnow" from="JustWorkingMenu" to="." method="_on_JustWorkingMenu_importModPCKnow"]
[connection signal="loadMoreDVDsNow" from="JustWorkingMenu" to="." method="_on_JustWorkingMenu_loadMoreDVDsNow"]
[connection signal="openSetting" from="JustWorkingMenu" to="." method="_on_JustWorkingMenu_openSetting"]
[connection signal="shareBootInfoJson" from="JustWorkingMenu" to="." method="_on_JustWorkingMenu_shareBootInfoJson"]
[connection signal="updateSelectionAssets" from="JustWorkingMenu" to="." method="_on_JustWorkingMenu_updateSelectionAssets"]
[connection signal="viewVRImageNow" from="JustWorkingMenu" to="." method="_on_JustWorkingMenu_viewVRImageNow"]
[connection signal="confirmed" from="JustWorkingAreYouSure" to="." method="_on_JustWorkingAreYouSure_confirmed"]
[connection signal="ShowModListMenuNow" from="JustWorkingSetting" to="." method="_on_JustWorkingSetting_ShowModListMenuNow"]
[connection signal="confirmed" from="JustWorkingSetting" to="." method="_on_JustWorkingSetting_confirmed"]
[connection signal="custom_action" from="JustWorkingSetting" to="." method="_on_JustWorkingSetting_custom_action"]
[connection signal="file_selected" from="JustAFileDialog" to="." method="_on_JustAFileDialog_file_selected"]
